2008-02-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- Add an icon column to the list view showing what connection type each
			connection is

2008-02-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  icons/Makefile.am
	  icons/nm-device-wwan.png
		- Add a mobile broadband device icon

2008-02-04  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
		- (cdma_add_menu_item, gsm_add_menu_item): add a default connection
			item when no connections are defined so that at least something can
			be picked from the menu

2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
		- (add_disconnect_item, gsm_menu_item_deactivate): add Disconnect...
			menu item, deactivate the device when it's selected
		- (gsm_add_menu_item): always display the device titles; never collapse
			a single connection into the device title

	* src/applet-device-cdma.c
		- (add_disconnect_item, cdma_menu_item_deactivate): add Disconnect...
			menu item, deactivate the device when it's selected
		- (cdma_add_menu_item): always display the device titles; never collapse
			a single connection into the device title

	* src/applet-device-wired.c
		- (wired_add_menu_item): always display the device titles; never collapse
			a single connection into the device title

2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wireless.c
		- (other_wireless_activate_cb, new_network_activate_cb): use
			gtk_window_present_with_time()

2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_separator_item): take a GtkWidget instead of a
			GtkMenuShell
		- (nma_menu_add_devices): don't add extra wireless menu items here, but
			return # of wireless devices
		- (nma_menu_add_vpn_submenu, nma_menu_add_vpn_submenu): pass a GtkWidget
			to nma_menu_add_separator_item()
		- (nma_menu_show_cb): add extra wireless items after the VPN menu